feat: :sparkles: Creacion Usuario Sign Up

--- a/src/views/signUp.html
+++ b/src/views/signUp.html
@@ -12,7 +12,10 @@
     <section class="texts_section">
         <h3>Create account</h3>
     </section>
+    
     <section class="inputs_section">
+        <form id="signUpForm" method="post">
+        <input type="text" id="nick" name="nick" placeholder="Your Username">
         <input type="email" id="email" name="email" placeholder="Email address">
         <div class="password-container">
             <input type="password" id="password" name="password" placeholder="Password">
@@ -22,10 +25,10 @@
             <input type="password" id="confirm" name="confirm" placeholder="Confirm password">
             <img src="https://www.svgrepo.com/show/532465/eye-slash.svg" id="toggleConfirmPassword" class="toggle-icon">
         </div>
-        
+        </form>
     </section>
     <section class="buttons_section">
-        <button>Create account</button>
+        <button form="signUpForm">Create account</button>
     </section>
     <section class="texts_section">
         <p>By creating an account or signing you agree to our <b><u id="termsAndConditions">Terms and Conditions</u></b></p>
