--- a/src/css/signUp.css
+++ b/src/css/signUp.css
@@ -68,6 +68,13 @@ body > img {
     max-width: 700px;
 }
 
+.inputs_section > form{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    max-width: 700px;
+}
+
 .inputs_section input {
     padding: 12px;
     width: 100%;
