feat: :sparkles: Insertar nuevo producto

--- a/src/views/crud.html
+++ b/src/views/crud.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../css/crud.css">
     <link rel="icon" type="image/x-icon" href="./storage/img/MVC.webp">
-    <script defer type="module" src="./js/module/index.js"></script>
+    <script defer type="module" src="../js/modules/crud.js"></script>
     <title>MVC</title>
 </head>
 <body>
@@ -34,16 +34,16 @@
                         </tr>
                     </thead>
                     <tbody id="myTbody">
-                        <tr>
+                        <!-- <tr>
                             <td><img src="//" height="100" alt=""></td>
                             <td contenteditable></td>
                             <td></td>
                             <td></td>
                             <td>
-                                <a href="#" class="btn"> edit </a>
+                                <a href="#" class="btn" id="asdasd"> edit </a>
                                 <a href="#" class="btn"> delete </a>
                             </td>
-                        </tr>
+                        </tr> -->
                     </tbody>
                 </table>
             </div>
