--- a/src/views/logIn.html
+++ b/src/views/logIn.html
@@ -46,7 +46,7 @@
          </div>
     </section>
     <section class="texts_section" id="footer">
-        <p>Don’t have an account? <b><u id="termsAndConditions">Sign up</u></b></p>
+        <p>Don’t have an account? <b><u id="termsAndConditions"><a href="signUp">Sign up</a></u></b></p>
     </section>
 </body>
 </html>
