--- a/src/views/openning.html
+++ b/src/views/openning.html
@@ -14,8 +14,8 @@
         <p>Now your finances are in one place and always under control</p>
     </section>
     <section class="buttons_section">
-        <button id="sign_in">Sign In</button>
-        <button>Create account</button>
+        <a href="logIn"><button id="sign_in">Sign In</button></a>
+        <a href="signUp"><button>Create account</button></a>
     </section>
 </body>
 </html>
